--- a/Module3/index.html
+++ b/Module3/index.html
@@ -1,1 +1,63 @@
+<!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Module 3 Assignment</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+	<header>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a href="index.html" class="navbar-brand"> FOOD, LLC</a>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				
+			</button>
+			
+		</div>
+		<div id="mynavbar" class="collapse navbar-collapse " >
+			<ul class="nav navbar-nav navbar-right text-center">
+				<li class="visible-xs"><a href="#">Chicken</a></li>
+				<li class="visible-xs"><a href="#">Beef</a></li>
+				<li class="visible-xs"><a href="#">Sushi</a></li>
+				
+			</ul>
+		</div>
+		</div>
+	</nav>
 
+</header>
+<div class="container" id="main">
+	<h2 class="text-center" id="menuhead">Our Menu</h2>
+	<hr>
+	
+	<div class="row">
+		
+		<div id="menu-tile" class="col-xs-12">
+		<h3 class="text-center" id="chicken">
+			Chicken
+		</h3>
+		<hr >
+		<div class="text-center">
+			<p id="dummy">
+				The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!
+				The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many
+				The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many
+				The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many
+			</p>
+		</div>
+		
+	</div>
+</div>
+</div>
+	<script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+
+</body>
+</html>
