--- a/Module3/index.html
+++ b/Module3/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Module 3 Assignment</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<header>
